--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,9 +9,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: 'yarn build:production'
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Install Dependencies
+      - run: npm ci
+      - name: Build Dependencies
+      - run: 'npm run build:production'
+      - name: Archive production artifact
+      - uses: actions/upload-artifact@v2
+        with: 
+          name: build
+          path: build
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Download artifact
+        uses: actions/downlaod-artifact@v2
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FITNESS_APP_9E108 }}'
-          projectId: fitness-app-9e108
+          name: build
+          path: build
+      - name: Deploy to Firebase
+        uses: 9e108/firebase-action@v2
+        with: 
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
